# psyclaw

./: .gitattributes  .gitignore  2026年度中国心理学会科研课题选题建议表.docx  2026年度中国心理学会科研课题选题建议表_PsyClaw_已填.docx  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  PLAN_PROMPT.md  PROMPT.md  README.md  TODO.md  feature_list.json  init.sh  nostop.ps1  nostop.sh  plan.ps1  plan.sh  progress.md  psyclaw.bat  pyproject.toml  ralph.ps1  ralph.sh  session-handoff.md
.claude/: settings.json
.claude/agents/: gates-auditor.md  security-reviewer.md
.claude/hooks/: compile-check.py  protect-paths.py
.codex/: hooks.json
.codex/agents/: gates-auditor.toml  security-reviewer.toml
dev/: PROMPT.md  TODO.md  feature_list.json  init.sh  nostop.ps1  nostop.sh  plan.ps1  plan.sh  ralph.ps1  ralph.sh  session-handoff.md
dev/docs/: FUCLAW_CHAOS_REPORT.md  MEMORY.md
dev/evalcase/: draft.md
dev/evalcase2/: data.csv  prompts2.md
docs/: ARCHITECTURE.md  COMMANDS.md  LIBRARY_MIGRATION_AUDIT.md  PSYCH_OPTIMIZATIONS.md  PsyClaw使用白皮书_v0.20.0.docx  PsyClaw使用白皮书_v0.21.0.docx  SANDBOX.md  TUTORIAL.md  WHITEPAPER.md  index.html  install.ps1  install.sh
evalcase/: RUBRIC.md  adversarial_prompts.md  effects.csv  meta_analysis.py
evalcase2/: RUBRIC2.md  draft2.md
evalcase3/: RUBRIC3.md
examples/: draft.apa7.docx  draft.apa7.md  draft.md
notes/: _diag_meta.py  hierarchical_regression_report.json  hierarchical_regression_report.md
psyclaw/: __init__.py  __main__.py  ajs.py  aliases.py  annotate.py  audit.py  autoloop.py  bootstrap.py  checkup.py  choices.py  cli.py  config.py  context.py  embed.py  env_setup.py  evalharness.py  figures.py  imgview.py  kg.py  loop.py  md_render.py  memory.py  messengers.py  mirror.py  modes.py  path_ingest.py  pdf_extract.py  pipeline.py  plugins.py  project_sense.py  provenance.py  recall.py  repl.py  review.py  sandbox.py  scaffold.py  search_router.py  sleep.py  status.py  tasks.py  (+9 more)
psyclaw/agents/: auditor.md  critic.md  executor.md  planner.md  reviewer.md  writer.md
psyclaw/commands/: research-loop.md
psyclaw/gates/: PSYCLAW.md  checker.py  figure_style.yaml  rigor.md  rules.yaml
psyclaw/mcp/: agent_tools.py  client.py  manager.py  registry.yaml  server_base.py
psyclaw/output/: __init__.py  apa7.py  cn_journal.py  jars.py  writing_backend.py
psyclaw/providers/: __init__.py  anthropic_api.py  base.py  mock.py  openai_compat.py  opencode_cli.py
psyclaw/psych/: __init__.py  analysis_plan.py  analyze.py  ancova.py  anova.py  anova2.py  assumptions.json  bayes.py  bridge_fetch.py  careless.py  cfa.py  chisquare.py  citations.py  cite_verify.py  clarify.py  cn_norms.json  compare_corr.py  decision_tree.py  descriptives.py  designs.json  diagnostics.py  efa.py  effect_size.py  equivalence.py  ethics.py  evidence.json  hierarchical_regression.py  institution.py  invariance.py  irr.py  (+43 more)
scripts/: build-dist.sh  build_whitepaper_docx.py
tests/: _mcp_echo_server.py  conftest.py  test_agent_learning.py  test_agent_streaming.py  test_ajs.py  test_aliases.py  test_analysis_plan.py  test_analysis_readme.py  test_ancova.py  test_annotate.py  test_anova.py  test_anova2.py  test_apa7_inline.py  test_apa7_stat.py  test_assist.py  test_audit_memory.py  test_autoloop.py  test_bayes.py  test_bootstrap.py  test_bridge_fetch.py  test_browser_mcp.py  test_capability_map.py  test_capture_pdf.py  test_careless.py  test_cfa.py  test_checkup.py  test_chisquare.py  test_choices_reads.py  test_citations.py  test_cite_redefine.py  test_cite_verify.py  test_clarify.py  test_cli_help.py  test_cli_toolify.py  test_cmdblock_tool_bridge.py  test_cn_journal.py  test_codex_ui.py  test_compare_corr.py  test_context.py  test_core_dependency.py  (+139 more)
(+58 files in other folders)
