[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psyclaw"
version = "0.15.0"
description = "心理学研究编排 Agent CLI — 文献调研 · 实验设计 · 论文写作 · 同行评审，质量检查内置；统计交给成熟库/MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PsyClaw" }]

# 核心 = stdlib 为主 + 唯一内置第三方:prompt_toolkit(交互基础设施:REPL 实时命令
# 下拉 + 中文宽字符输入;缺失时代码自动降级 readline,故裸源码仍可跑)。
# 统计计算仍整体外移到成熟库/MCP——psyclaw 自身不 import 任何统计库(铁律不变)。
dependencies = [
    "prompt_toolkit>=3.0",   # 交互基础设施(命令下拉+中文输入);非统计,按用户拍板内置
]

[project.optional-dependencies]
stats = [  # 可选:在本机直接跑统计时安装的成熟库栈(psyclaw 不强制依赖)
    "pingouin>=0.5", "pandas>=2.0", "numpy>=1.22", "scipy>=1.8",
    "statsmodels>=0.14", "lifelines>=0.27", "factor_analyzer>=0.4", "semopy>=2.3",
]
viz = ["seaborn", "matplotlib"]
full = ["pyyaml", "rich", "mcp"]   # prompt_toolkit 已提为核心依赖,不再列此
embed = ["model2vec"]  # 本地语义嵌入(纯 numpy 静态模型);未装时召回用内置哈希向量兜底

[project.scripts]
psyclaw = "psyclaw.cli:main"

[tool.setuptools.packages.find]
include = ["psyclaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
